--- a/playground.ipynb
+++ b/playground.ipynb
@@ -77,6 +77,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPalindrome(text):\n",
+    "\tseparators = [' ', '\\n', '\\t', '\\r', ',', ';', '!']\n",
+    "\tsanitized_text = ''.join(char for char in text if char not in separators )\n",
+    "\treturn sanitized_text == sanitized_text[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalindrome(\"sees\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amanaplanacanalpanama\n",
+      "amanaplanacanalpanama\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPalindrome('aman, aplan, acanal, panama')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
